rust/codec-meca/tests/snapshots/examples__cb91eca4-74d6-1014-98bf-f67ca965a351.decode.losses.snap
---
source: rust/codec-meca/tests/examples.rs
expression: info.losses
---
//article/back/ref-list/ref/mixed-citation/ext-link: 1
//article/back/ref-list/ref/mixed-citation/string-name/text(): 129
//article/back/ref-list/title: 1
//article/back/sec/@id: 2
//article/body/sec/@id: 3
//article/body/sec/fig/@fig-type: 1
//article/body/sec/fig/@position: 1
//article/body/sec/sec/@id: 9
//article/front/article-meta/author-notes: 1
//article/front/article-meta/counts: 1
//article/front/article-meta/elocation-id: 1
//article/front/article-meta/permissions: 1
//article/front/article-meta/pub-date/@pub-type: 1
//article/front/article-meta/self-uri: 1
//article/front/journal-meta/journal-id: 1
//article/front/journal-meta/journal-title-group/abbrev-journal-title: 1
