rust/codec-meca/tests/snapshots/examples__f2af58f0-7111-1014-b4ee-f306f628684d.decode.losses.snap
---
source: rust/codec-meca/tests/examples.rs
expression: info.losses
---
//article/back/ref-list/ref/mixed-citation/string-name/text(): 76
//article/back/ref-list/title: 1
//article/back/sec/@id: 3
//article/body/sec/@id: 2
//article/body/sec/fig/@fig-type: 1
//article/body/sec/fig/@position: 1
//article/body/sec/sec/@id: 8
//article/front/article-meta/author-notes: 1
//article/front/article-meta/counts: 1
//article/front/article-meta/elocation-id: 1
//article/front/article-meta/permissions: 1
//article/front/article-meta/pub-date/@pub-type: 1
//article/front/article-meta/self-uri: 1
//article/front/journal-meta/journal-id: 1
//article/front/journal-meta/journal-title-group/abbrev-journal-title: 1
