rust/codec-meca/tests/snapshots/examples__ffa37796-6caf-1014-bed2-8e51ecdb86df.decode.losses.snap
---
source: rust/codec-meca/tests/examples.rs
expression: info.losses
---
//article/back/ack/label: 1
//article/back/glossary: 1
//article/back/ref-list/label: 1
//article/back/ref-list/ref/mixed-citation/etal: 58
//article/back/ref-list/ref/mixed-citation/month: 59
//article/back/ref-list/title: 1
//article/back/sec/label: 3
//article/back/sec/table-wrap/@orientation: 1
//article/back/sec/table-wrap/@position: 1
//article/body/sec/fig/@fig-type: 1
//article/body/sec/fig/@position: 1
//article/body/sec/label: 4
//article/body/sec/sec/fig/@fig-type: 2
//article/body/sec/sec/fig/@position: 2
//article/body/sec/sec/label: 8
//article/front/article-meta/author-notes: 1
//article/front/article-meta/counts/page-count: 1
//article/front/article-meta/kwd-group/@kwd-group-type: 1
